tests/baselines/reference/computedPropertyNames39_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
computedPropertyNames39_ES5.ts(8,9): error TS2411: Property '[1 << 6]' of type 'Foo' is not assignable to 'number' index type 'Foo2'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== computedPropertyNames39_ES5.ts (1 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        [s: number]: Foo2;
    
        // Computed properties
        get [1 << 6]() { return new Foo }
            ~~~~~~~~
!!! error TS2411: Property '[1 << 6]' of type 'Foo' is not assignable to 'number' index type 'Foo2'.
        set [1 << 6](p: Foo2) { }
    }